Bugfix: Editing text makes color selector to select wrong color

When we press `Enter` this deactivates the KoFillConfigWidget, which
reverts the color to the `overriddenColor`. We change this behavior by
uploading the color of the shape back to resourceManager in SvgTextTool.

BUG:443793
(cherry picked from commit 1913d805b833f9ae8de6a159db67a9f638c45502)